cabal-version:      3.0
name:               lhx
version:            0.1.0.0
synopsis:           A simple line-by-line templating engine
homepage:           https://github.com/ruHaskell-learn/lhx
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aleksei Pirogov
maintainer:         astynax@users.noreply.github.com
category:           Text
extra-source-files:
    CHANGELOG.md
    README.md

data-files:
    data/lhx.svg.gz
    data/lhx-16x16.ico

common defaults
    default-language:   Haskell2010
    build-depends:      base >=4.14.3.0
    default-extensions:
        BlockArguments
        ImportQualifiedPost
        OverloadedStrings
        TupleSections
        TypeApplications
        LambdaCase
        FlexibleContexts

    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints
        -Wmissing-exported-signatures

library
    import:          defaults
    hs-source-dirs:  lib
    exposed-modules:
        Lhx
        Lhx.Parser

    build-depends:
        , megaparsec
        , text

library lhx-assets
    import:          defaults
    hs-source-dirs:  lib-assets
    exposed-modules:
        Lhx.Assets
    build-depends:
        , text
        , bytestring
        , file-embed

executable lhx
    import:         defaults
    hs-source-dirs: app
    main-is:        Main.hs
    build-depends:  lhx
                  , text
                  , optparse-applicative

executable lhx-tui
    import:         defaults
    hs-source-dirs: app-tui
    main-is:        Main.hs
    ghc-options:    -threaded
    default-extensions:
      TemplateHaskell
    build-depends:  lhx
                  , text
                  , brick
                  , vty
                  , microlens
                  , microlens-th
                  , mtl

executable lhx-tpgui
    import:         defaults
    hs-source-dirs: app-tpgui
    main-is:        Main.hs
    ghc-options:    -threaded
    build-depends:  lhx
                  , text
                  , threepenny-gui

executable lhx-web
    import:         defaults
    hs-source-dirs: app-web
    main-is:        Main.hs
    ghc-options:    -threaded
    build-depends:  lhx
                  , text
                  , scotty
                  , blaze-html
                  , blaze-markup

executable lhx-webx
    import:         defaults
    hs-source-dirs: app-webx
    main-is:        Main.hs
    ghc-options:    -threaded
    build-depends:  lhx
                  , lhx-assets
                  , text
                  , scotty
                  , blaze-html
                  , blaze-markup
                  , wai
                  , wai-websockets
                  , websockets
                  , aeson
                  , xstatic

test-suite lhx-test
    import:         defaults
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs
    other-modules:  TestParser, TestTemplate
    build-depends:  lhx
                  , text
                  , quickcheck-text
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
