cabal-version:      3.0
name:               lhx
version:            0.1.0.0
synopsis:           A simple line-by-line templating engine
homepage:           https://github.com/ruHaskell-learn/lhx
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aleksei Pirogov
maintainer:         astynax@users.noreply.github.com
category:           Text
extra-source-files:
    CHANGELOG.md
    README.md

data-files:
    data/lhx.svg.gz
    data/lhx-16x16.ico
    data/mvp.css.gz
    data/htmx.min.js.gz

common defaults
    default-language:   Haskell2010
    build-depends:      base >=4.14.3.0
    default-extensions:
        BlockArguments
        ImportQualifiedPost
        OverloadedStrings
        TupleSections
        TypeApplications
        LambdaCase
        FlexibleContexts

    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints
        -Wmissing-exported-signatures

common scotty-app
    import:          defaults
    build-depends:
        , lhx
        , lhx-assets
        , lhx-browser
        , text
        , scotty
        , blaze-html
        , blaze-markup
        , xstatic

library
    import:          defaults
    hs-source-dirs:  lib
    exposed-modules:
        Lhx
        Lhx.Parser

    build-depends:
        , megaparsec
        , text

library lhx-assets
    import:          defaults
    hs-source-dirs:  lib-assets
    exposed-modules:
        Lhx.Assets
    build-depends:
        , text
        , bytestring
        , file-embed

library lhx-streaming
    import:          defaults
    hs-source-dirs:  lib-streaming
    exposed-modules:
        Lhx.Streaming
    build-depends:
        , bytestring
        , text
        , mtl
        , streaming
        , streaming-bytestring

library lhx-browser
    import:          defaults
    hs-source-dirs:  lib-browser
    exposed-modules:
        Lhx.Browser
    build-depends:
        , process
        , port-utils

executable lhx
    import:         defaults
    hs-source-dirs: app
    main-is:        Main.hs
    build-depends:
        , lhx
        , text
        , optparse-applicative

executable lhx-tui
    import:         defaults
    hs-source-dirs: app-tui
    main-is:        Main.hs
    ghc-options:    -threaded
    default-extensions:
        TemplateHaskell
    build-depends:
        , lhx
        , lhx-streaming
        , text
        , brick
        , vty
        , microlens
        , microlens-th
        , mtl

executable lhx-tpgui
    import:         defaults
    hs-source-dirs: app-tpgui
    main-is:        Main.hs
    ghc-options:    -threaded
    build-depends:
        , lhx
        , lhx-assets
        , lhx-browser
        , text
        , threepenny-gui

executable lhx-web
    import:         scotty-app
    hs-source-dirs: app-web
    main-is:        Main.hs
    ghc-options:    -threaded
    build-depends:  file-embed

executable lhx-webx
    import:         scotty-app
    hs-source-dirs: app-webx
    main-is:        Main.hs
    ghc-options:    -threaded
    build-depends:
        , file-embed
        , wai
        , wai-websockets
        , websockets
        , aeson
        , mtl

test-suite lhx-test
    import:         defaults
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs
    other-modules:  TestParser, TestTemplate
    build-depends:
       , lhx
       , text
       , quickcheck-text
       , tasty
       , tasty-hunit
       , tasty-quickcheck
